--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "playeronix",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -31,12 +31,15 @@
 		"url": "https://github.com/holmityd/playeronix.git"
 	},
 	"devDependencies": {
+		"@babel/eslint-parser": "^7.23.3",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
 		"@sveltejs/package": "^2.0.0",
 		"autoprefixer": "^10.4.16",
+		"babel-eslint": "^10.1.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-import": "^2.29.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"postcss": "^8.4.32",
 		"prettier": "^3.0.0",
