--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "playeronix",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -10,7 +10,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"package:publish": "npm run format && standard-version && git push --follow-tags origin main && npm publish"
 	},
 	"exports": {
 		".": {
